app/scss/main.scss
@use "sass:math";

@import "vars";
@import "fonts";
@import "media";
@import "utility";

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
}

img {
  max-width: 100%;
  height: auto;
  display: block;
}

picture {
  display: block;
}

body {
  min-height: 100vh;
  min-width: 360px;
  font-family: Saira, sans-serif;
  font-size: 16px;
  line-height: 1.3;
  position: relative;
  overflow-x: hidden;
}

.promotion {
  padding: 28px 20px;
  background-color: $stb-bg-primary;
  //background-image: radial-gradient(50% 50% at 50% 50%, $stb-green-30 0%, $stb-green-15 61.29%, $stb-green-00 100%), radial-gradient(
  //								50% 50% at 50% 50%,
  //								$stb-yellow-30 0%,
  //								$stb-yellow-20 42%,
  //								$stb-yellow-07 78.24%,
  //								$stb-yellow-00 100%);
  //background-size: 1367px 1367px, 1234px 1234px;
  //background-repeat: no-repeat;
  //background-position: top -684px left -200px, top -617px right -400px;

  &__title {
    margin-bottom: 28px;
    text-transform: uppercase;
    color: $stb-text-primary;
  }

  &__list {
    margin: 0 auto;
    max-width: 1264px;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(312px, 1fr));
    justify-items: center;
    grid-gap: 12px;
  }
}

.promo {
  display: block;
  border-radius: $border-r-xl;
  border: 1px solid transparent;
  background: linear-gradient(
      to bottom,
      $stb-neutral-100 0%,
      $stb-neutral-150 100%
    )
    border-box;

  &__card {
    position: relative;
    max-width: 100%;
    min-height: 260px;
    display: flex;
    flex-direction: column;
    gap: 4px;
    align-items: center;
    padding: 4px;
    background: $stb-bg-secondary;
    border-radius: $border-r-xl;
    transition: background $transition;
  }

  &__label {
    position: absolute;
    z-index: 1;
    top: 3px;
    right: 4px;

    &::before {
      position: absolute;
      inset-inline-start: 1px;
      top: 0;
      transform: translate(-100%);
      width: 6px;
      height: 6px;
      background-color: inherit;
      -webkit-mask-image: radial-gradient(
        100% 100% at -1px calc(100% + 1px),
        rgb(255 255 255 / 0) 100%,
        rgb(255 255 255) 101%
      );
      mask-image: radial-gradient(
        100% 100% at -1px calc(100% + 1px),
        rgb(255 255 255 / 0) 100%,
        rgb(255 255 255) 101%
      );
      content: "";
    }

    &::after {
      inset-inline-end: -1px;
      bottom: 1px;
      transform: translateY(100%);
      position: absolute;
      width: 6px;
      height: 6px;
      background-color: inherit;
      -webkit-mask-image: radial-gradient(
        100% 100% at -1px calc(100% + 1px),
        rgb(255 255 255 / 0) 100%,
        rgb(255 255 255) 101%
      );
      mask-image: radial-gradient(
        100% 100% at -1px calc(100% + 1px),
        rgb(255 255 255 / 0) 100%,
        rgb(255 255 255) 101%
      );
      content: "";
    }
  }

  &__picture-wrapper {
    width: 100%;
    border-radius: $border-r-l;
    overflow: hidden;
    position: relative;

    &__background {
      width: 100%;
      height: 100%;
      object-fit: cover;
    }

    .promo-img {
      position: absolute;
      bottom: 0;
      object-fit: cover;
      width: 100%;
      height: 100%;
      transition: scale $transition;
    }
  }

  &__plate {
    padding: 6px 16px;
    width: 100%;
    display: flex;
    gap: 8px;
    flex-direction: column;
    height: 100%;
  }

  &__plate-title {
    color: $stb-text-primary;
  }

  &__plate-link {
    align-self: end;
  }

  &:hover &__card {
    background: $stb-neutral-100;
  }

  &:hover &__image {
    scale: 1.1;
  }
}

// Components

.label {
  padding-inline: 8px;
  font-style: italic;
  text-align: center;
  text-transform: uppercase;
  font-size: $stb-text-12;
  line-height: $stb-line-130;
  letter-spacing: 0.14px;
  border-radius: 0 10px 0 8px;
  background-color: inherit;

  @include desk-s {
    font-size: $stb-text-14;
    line-height: $stb-line-110;
  }

  &--casino {
    color: $stb-green-600;
  }

  &--sport {
    color: $stb-brand-350;
  }

  &--special {
    color: $stb-brand-200;
  }
}

.link {
  display: inline-grid;
  grid-auto-flow: column;
  align-items: stretch;
  grid-column-gap: 4px;
  color: $stb-link-accent;
  text-transform: uppercase;
  font-style: italic;
  font-size: $stb-text-12;
  line-height: $stb-line-130;

  @include desk-l {
    font-size: $stb-text-14;
    line-height: $stb-line-140;
  }

  .icon-arrow {
    display: block;
    flex-shrink: 0;
  }
}

